// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyTemplateDetailsView component renders as expected -- no related object field 1`] = `
<div
  className="policy-template-details-view"
>
  <div
    className="details"
  >
    <div
      className="overview"
    >
      <Title
        className="title"
        headingLevel="h2"
      >
        Template details
      </Title>
      <DescriptionList>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Name
          </DescriptionListTerm>
          <DescriptionListDescription>
            policy-gatekeeper-admission
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Cluster
          </DescriptionListTerm>
          <DescriptionListDescription>
            calamari
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Kind
          </DescriptionListTerm>
          <DescriptionListDescription>
            ConfigurationPolicy
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            API groups
          </DescriptionListTerm>
          <DescriptionListDescription>
            policy.open-cluster-management.io/v1
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Compliant
          </DescriptionListTerm>
          <DescriptionListDescription>
            NonCompliant
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Details
          </DescriptionListTerm>
          <DescriptionListDescription>
            [{"Compliant":"NonCompliant","Validity":{},"conditions":[{"lastTransitionTime":"2020-08-21T17:01:43Z","message":"events exist and should be deleted: [openshift-multus.162c73ad488032d5, openshift-multus.162c749621995399, openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system","reason":"K8s has a must \`not\` have object","status":"True","type":"violation"}]}]
          </DescriptionListDescription>
        </DescriptionListGroup>
      </DescriptionList>
    </div>
    <div
      className="yaml"
    >
      <Title
        className="title"
        headingLevel="h2"
      >
        Template yaml
      </Title>
      <div>
        <YamlEditor
          height="500px"
          readOnly={true}
          setEditor={[Function]}
          width="100%"
          yaml="apiVersion: policy.open-cluster-management.io/v1
kind: ConfigurationPolicy
metadata:
  creationTimestamp: '2020-08-20T22:37:24Z'
  generation: 1
  labels:
    cluster-name: calamari
    cluster-namespace: calamari
    policy.open-cluster-management.io/cluster-name: calamari
    policy.open-cluster-management.io/cluster-namespace: calamari
  name: policy-gatekeeper-admission
  namespace: calamari
  ownerReferences:
    - apiVersion: policy.open-cluster-management.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Policy
      name: default.policy-gatekeeper
      uid: 96210e96-ecbf-4aea-aa47-e11ec52f0855
  resourceVersion: '25993504'
  selfLink: >-
    /apis/policy.open-cluster-management.io/v1/namespaces/calamari/configurationpolicies/policy-gatekeeper-admission
  uid: a925d81e-9b77-4de0-8917-5d55a46e2445
spec:
  object-templates:
    - complianceType: mustnothave
      objectDefinition:
        apiVersion: v1
        kind: Event
        metadata:
          annotations:
            constraint_action: deny
            constraint_kind: K8sRequiredLabels
            constraint_name: ns-must-have-gk
            event_type: violation
          namespace: gatekeeper-system
  remediationAction: inform
  severity: low
status:
  compliancyDetails:
    - Compliant: NonCompliant
      Validity: {}
      conditions:
        - lastTransitionTime: '2020-08-21T17:01:43Z'
          message: >-
            events exist and should be deleted:
            [openshift-multus.162c73ad488032d5,
            openshift-multus.162c749621995399,
            openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system
          reason: K8s has a must \`not\` have object
          status: 'True'
          type: violation
  compliant: NonCompliant
"
        />
      </div>
    </div>
  </div>
  <div
    className="table"
  >
    <Title
      className="title"
      headingLevel="h2"
    >
      Related resources
    </Title>
    <Memo(Connect(PatternFlyTable))
      columns={
        Array [
          Object {
            "cellTransforms": Array [
              [Function],
            ],
            "msgKey": "table.header.name",
            "resourceKey": "object.metadata.name",
            "title": "Name",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.namespace",
            "resourceKey": "object.metadata.namespace",
            "title": "Namespace",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.kind",
            "resourceKey": "object.kind",
            "title": "Kind",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "cellTransforms": Array [
              [Function],
            ],
            "msgKey": "table.header.apiGroups",
            "resourceKey": "object.apiVersion",
            "title": "API groups",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.compliant",
            "resourceKey": "compliant",
            "title": "Compliant",
            "transformFunction": [Function],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.reason",
            "resourceKey": "reason",
            "title": "Reason",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "title": "",
            "transformFunction": [Function],
          },
        ]
      }
      noResultMsg="No results found"
      rows={Array []}
      sortBy={
        Object {
          "direction": "asc",
          "index": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`PolicyTemplateDetailsView component renders as expected -- relatedObjects field is [] 1`] = `
<div
  className="policy-template-details-view"
>
  <div
    className="details"
  >
    <div
      className="overview"
    >
      <Title
        className="title"
        headingLevel="h2"
      >
        Template details
      </Title>
      <DescriptionList>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Name
          </DescriptionListTerm>
          <DescriptionListDescription>
            policy-gatekeeper-admission
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Cluster
          </DescriptionListTerm>
          <DescriptionListDescription>
            calamari
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Kind
          </DescriptionListTerm>
          <DescriptionListDescription>
            ConfigurationPolicy
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            API groups
          </DescriptionListTerm>
          <DescriptionListDescription>
            policy.open-cluster-management.io/v1
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Compliant
          </DescriptionListTerm>
          <DescriptionListDescription>
            NonCompliant
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Details
          </DescriptionListTerm>
          <DescriptionListDescription>
            [{"Compliant":"NonCompliant","Validity":{},"conditions":[{"lastTransitionTime":"2020-08-21T17:01:43Z","message":"events exist and should be deleted: [openshift-multus.162c73ad488032d5, openshift-multus.162c749621995399, openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system","reason":"K8s has a must \`not\` have object","status":"True","type":"violation"}]}]
          </DescriptionListDescription>
        </DescriptionListGroup>
      </DescriptionList>
    </div>
    <div
      className="yaml"
    >
      <Title
        className="title"
        headingLevel="h2"
      >
        Template yaml
      </Title>
      <div>
        <YamlEditor
          height="500px"
          readOnly={true}
          setEditor={[Function]}
          width="100%"
          yaml="apiVersion: policy.open-cluster-management.io/v1
kind: ConfigurationPolicy
metadata:
  creationTimestamp: '2020-08-20T22:37:24Z'
  generation: 1
  labels:
    cluster-name: calamari
    cluster-namespace: calamari
    policy.open-cluster-management.io/cluster-name: calamari
    policy.open-cluster-management.io/cluster-namespace: calamari
  name: policy-gatekeeper-admission
  namespace: calamari
  ownerReferences:
    - apiVersion: policy.open-cluster-management.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Policy
      name: default.policy-gatekeeper
      uid: 96210e96-ecbf-4aea-aa47-e11ec52f0855
  resourceVersion: '25993504'
  selfLink: >-
    /apis/policy.open-cluster-management.io/v1/namespaces/calamari/configurationpolicies/policy-gatekeeper-admission
  uid: a925d81e-9b77-4de0-8917-5d55a46e2445
spec:
  object-templates:
    - complianceType: mustnothave
      objectDefinition:
        apiVersion: v1
        kind: Event
        metadata:
          annotations:
            constraint_action: deny
            constraint_kind: K8sRequiredLabels
            constraint_name: ns-must-have-gk
            event_type: violation
          namespace: gatekeeper-system
  remediationAction: inform
  severity: low
status:
  compliancyDetails:
    - Compliant: NonCompliant
      Validity: {}
      conditions:
        - lastTransitionTime: '2020-08-21T17:01:43Z'
          message: >-
            events exist and should be deleted:
            [openshift-multus.162c73ad488032d5,
            openshift-multus.162c749621995399,
            openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system
          reason: K8s has a must \`not\` have object
          status: 'True'
          type: violation
  compliant: NonCompliant
  relatedObjects: []
"
        />
      </div>
    </div>
  </div>
  <div
    className="table"
  >
    <Title
      className="title"
      headingLevel="h2"
    >
      Related resources
    </Title>
    <Memo(Connect(PatternFlyTable))
      columns={
        Array [
          Object {
            "cellTransforms": Array [
              [Function],
            ],
            "msgKey": "table.header.name",
            "resourceKey": "object.metadata.name",
            "title": "Name",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.namespace",
            "resourceKey": "object.metadata.namespace",
            "title": "Namespace",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.kind",
            "resourceKey": "object.kind",
            "title": "Kind",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "cellTransforms": Array [
              [Function],
            ],
            "msgKey": "table.header.apiGroups",
            "resourceKey": "object.apiVersion",
            "title": "API groups",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.compliant",
            "resourceKey": "compliant",
            "title": "Compliant",
            "transformFunction": [Function],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.reason",
            "resourceKey": "reason",
            "title": "Reason",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "title": "",
            "transformFunction": [Function],
          },
        ]
      }
      noResultMsg="No results found"
      rows={Array []}
      sortBy={
        Object {
          "direction": "asc",
          "index": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`PolicyTemplateDetailsView component renders as expected 1`] = `
<div
  className="policy-template-details-view"
>
  <div
    className="details"
  >
    <div
      className="overview"
    >
      <Title
        className="title"
        headingLevel="h2"
      >
        Template details
      </Title>
      <DescriptionList>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Name
          </DescriptionListTerm>
          <DescriptionListDescription>
            policy-gatekeeper-admission
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Cluster
          </DescriptionListTerm>
          <DescriptionListDescription>
            calamari
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Kind
          </DescriptionListTerm>
          <DescriptionListDescription>
            ConfigurationPolicy
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            API groups
          </DescriptionListTerm>
          <DescriptionListDescription>
            policy.open-cluster-management.io/v1
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Compliant
          </DescriptionListTerm>
          <DescriptionListDescription>
            NonCompliant
          </DescriptionListDescription>
        </DescriptionListGroup>
        <DescriptionListGroup>
          <DescriptionListTerm>
            Details
          </DescriptionListTerm>
          <DescriptionListDescription>
            [{"Compliant":"NonCompliant","Validity":{},"conditions":[{"lastTransitionTime":"2020-08-21T17:01:43Z","message":"events exist and should be deleted: [openshift-multus.162c73ad488032d5, openshift-multus.162c749621995399, openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system","reason":"K8s has a must \`not\` have object","status":"True","type":"violation"}]}]
          </DescriptionListDescription>
        </DescriptionListGroup>
      </DescriptionList>
    </div>
    <div
      className="yaml"
    >
      <Title
        className="title"
        headingLevel="h2"
      >
        Template yaml
      </Title>
      <div>
        <YamlEditor
          height="500px"
          readOnly={true}
          setEditor={[Function]}
          width="100%"
          yaml="apiVersion: policy.open-cluster-management.io/v1
kind: ConfigurationPolicy
metadata:
  creationTimestamp: '2020-08-20T22:37:24Z'
  generation: 1
  labels:
    cluster-name: calamari
    cluster-namespace: calamari
    policy.open-cluster-management.io/cluster-name: calamari
    policy.open-cluster-management.io/cluster-namespace: calamari
  name: policy-gatekeeper-admission
  namespace: calamari
  ownerReferences:
    - apiVersion: policy.open-cluster-management.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Policy
      name: default.policy-gatekeeper
      uid: 96210e96-ecbf-4aea-aa47-e11ec52f0855
  resourceVersion: '25993504'
  selfLink: >-
    /apis/policy.open-cluster-management.io/v1/namespaces/calamari/configurationpolicies/policy-gatekeeper-admission
  uid: a925d81e-9b77-4de0-8917-5d55a46e2445
spec:
  object-templates:
    - complianceType: mustnothave
      objectDefinition:
        apiVersion: v1
        kind: Event
        metadata:
          annotations:
            constraint_action: deny
            constraint_kind: K8sRequiredLabels
            constraint_name: ns-must-have-gk
            event_type: violation
          namespace: gatekeeper-system
  remediationAction: inform
  severity: low
status:
  compliancyDetails:
    - Compliant: NonCompliant
      Validity: {}
      conditions:
        - lastTransitionTime: '2020-08-21T17:01:43Z'
          message: >-
            events exist and should be deleted:
            [openshift-multus.162c73ad488032d5,
            openshift-multus.162c749621995399,
            openshift-multus.162c757efd7ebb62] in namespace gatekeeper-system
          reason: K8s has a must \`not\` have object
          status: 'True'
          type: violation
  compliant: NonCompliant
  relatedObjects:
    - compliant: NonCompliant
      object:
        apiVersion: /v1
        kind: events
        metadata:
          name: openshift-multus.162c757efd7ebb62
          namespace: gatekeeper-system
          selfLink: >-
            /api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62
      reason: Resource found but not expected
    - compliant: Compliant
      object:
        apiVersion: /v1
        kind: events
        metadata:
          name: openshift-multus.162c757efd7ebb62
          namespace: gatekeeper-system
          selfLink: >-
            /api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62
      reason: Resource found and expected
    - compliant: Pending
      object:
        apiVersion: /v1
        kind: events
        metadata:
          name: openshift-multus.162c757efd7ebb62
          namespace: gatekeeper-system
          selfLink: >-
            /api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62
      reason: No status
    - compliant: NonCompliant
      object:
        apiVersion: /v1
        kind: events
        metadata:
          name: openshift-multus.162c73ad488032d5
          namespace: gatekeeper-system
          selfLink: >-
            /api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c73ad488032d5
      reason: Resource found but not expected
    - compliant: NonCompliant
      object:
        apiVersion: /v1
        kind: events
        metadata:
          name: openshift-multus.162c749621995399
          namespace: gatekeeper-system
          selfLink: >-
            /api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c749621995399
      reason: Resource found but not expected
"
        />
      </div>
    </div>
  </div>
  <div
    className="table"
  >
    <Title
      className="title"
      headingLevel="h2"
    >
      Related resources
    </Title>
    <Memo(Connect(PatternFlyTable))
      columns={
        Array [
          Object {
            "cellTransforms": Array [
              [Function],
            ],
            "msgKey": "table.header.name",
            "resourceKey": "object.metadata.name",
            "title": "Name",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.namespace",
            "resourceKey": "object.metadata.namespace",
            "title": "Namespace",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.kind",
            "resourceKey": "object.kind",
            "title": "Kind",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "cellTransforms": Array [
              [Function],
            ],
            "msgKey": "table.header.apiGroups",
            "resourceKey": "object.apiVersion",
            "title": "API groups",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.compliant",
            "resourceKey": "compliant",
            "title": "Compliant",
            "transformFunction": [Function],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "msgKey": "table.header.reason",
            "resourceKey": "reason",
            "title": "Reason",
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
          Object {
            "title": "",
            "transformFunction": [Function],
          },
        ]
      }
      noResultMsg="No results found"
      rows={
        Array [
          Array [
            "openshift-multus.162c757efd7ebb62",
            "gatekeeper-system",
            "events",
            "/v1",
            Object {
              "title": <div>
                <RedExclamationCircleIcon />
                 
                Not compliant
              </div>,
            },
            "Resource found but not expected",
            Object {
              "title": <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>,
            },
          ],
          Array [
            "openshift-multus.162c757efd7ebb62",
            "gatekeeper-system",
            "events",
            "/v1",
            Object {
              "title": <div>
                <GreenCheckCircleIcon />
                 
                Compliant
              </div>,
            },
            "Resource found and expected",
            Object {
              "title": <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>,
            },
          ],
          Array [
            "openshift-multus.162c757efd7ebb62",
            "gatekeeper-system",
            "events",
            "/v1",
            Object {
              "title": <div>
                <YellowExclamationTriangleIcon />
                 
                No status
              </div>,
            },
            "No status",
            Object {
              "title": <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c757efd7ebb62"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>,
            },
          ],
          Array [
            "openshift-multus.162c73ad488032d5",
            "gatekeeper-system",
            "events",
            "/v1",
            Object {
              "title": <div>
                <RedExclamationCircleIcon />
                 
                Not compliant
              </div>,
            },
            "Resource found but not expected",
            Object {
              "title": <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c73ad488032d5"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>,
            },
          ],
          Array [
            "openshift-multus.162c749621995399",
            "gatekeeper-system",
            "events",
            "/v1",
            Object {
              "title": <div>
                <RedExclamationCircleIcon />
                 
                Not compliant
              </div>,
            },
            "Resource found but not expected",
            Object {
              "title": <a
                href="/multicloud/details/calamari/api/v1/namespaces/gatekeeper-system/events/openshift-multus.162c749621995399"
                rel="noopener noreferrer"
                target="_blank"
              >
                View yaml
              </a>,
            },
          ],
        ]
      }
      sortBy={
        Object {
          "direction": "asc",
          "index": 0,
        }
      }
    />
  </div>
</div>
`;
